%% P3-hotfix Class Diagram

classDiagram
    class OpenFOAMAdapter {
        -bool _dry_run
        -ExecutionBackend _backend
        -Path _template_dir
        +prepare(case, case_dir, run_dir) None
        +run(case, case_dir, run_dir, resources) RunResult
        +collect_outputs(case, run_dir) ArtifactManifest
        -_build_context(case, case_dir, run_dir) dict
        -_render_template(name, context) str
        -_is_naca_case(case) bool
        -_prepare_ldc(case_dir_out, context) None
        -_prepare_naca(case_dir_out, context, case_dir) None
        -_find_solver_config(case) SolverConfig
        -_merge_step_results(results, version) RunResult
    }

    class MetricsEngine {
        +compute(case, artifacts, run_result, timing, case_dir) MetricsResult
        -_get_reference_qoi(case, artifacts, case_dir) dict
    }

    class MetricsResult {
        +dict~str,float~ qoi_relative_errors
        +bool qoi_pass
        +str overall_status
        +list~str~ notes
        +dict~str,float~? qoi_computed_values
    }

    class ArtifactManifest {
        +dict~str,Path~ files
        +dict~str,float~? qoi_values
        +dict~str,list~? curves
    }

    class CaseSpec {
        +str id
        +ConditionsSpec conditions
        +GeometrySpec? geometry
        +list~SolverConfig~ solvers
        +OutputSpec outputs
    }

    class ConditionsSpec {
        +float? reynolds
        +float? mach
        +float? alpha_deg
    }

    class SolverConfig {
        +str name
        +dict? parameters
    }

    OpenFOAMAdapter ..> CaseSpec : uses
    OpenFOAMAdapter ..> ArtifactManifest : creates
    MetricsEngine ..> ArtifactManifest : reads qoi_values
    MetricsEngine ..> MetricsResult : creates
    MetricsResult <|-- qoi_computed_values : NEW Optional field
    CaseSpec *-- ConditionsSpec
    CaseSpec *-- SolverConfig
